# viser-wrapper

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh
scripts/: _auto_git_clone.sh  install_colmap.sh
src/multiview_videos_viser/: __init__.py
src/viser_wrapper/: __init__.py  multiview_videos_viser.py
