[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiview_videos_viser"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "viser>=1.0",
    "tqdm",
    "beartype",
    "jaxtyping",
]
